--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Home - Gabriel Salami</title>
+    <title>Home - Gabriel Salami <a href="/gov.pdf">link</a> </title>
     <meta name="description" content="Desenvolvedor BackEnd, FrontEnd e Mobile">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="manifest" href="manifest.json">
