--- a/hire-me.html
+++ b/hire-me.html
@@ -20,7 +20,7 @@
                 id="navbarNav">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="projects-grid-cards.html">Projects</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="projects-compact-grid.html">Projects</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="cv.html">CV</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link active" href="hire-me.html">Hire me</a></li>
                 </ul>
