--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Home - Gabriel Salami  </title>
+    <title>Home - Gabriel Salami</title>
     <meta name="description" content="Desenvolvedor BackEnd, FrontEnd e Mobile">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="manifest" href="manifest.json">
@@ -20,7 +20,7 @@
                 id="navbarNav">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link active" href="index.html">Home</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="projects-grid-cards.html">Projects</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="projects-compact-grid.html">Projects</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="cv.html">CV</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="hire-me.html">Hire me</a></li>
                 </ul>
@@ -32,7 +32,12 @@
             <div class="container">
                 <div class="avatar" style="background-image:url(&quot;assets/img/avatars/avatar.jpg&quot;);"></div>
                 <div class="about-me">
-                        <a href="/gov.pdf">link</a>
+                    <section class="portfolio-block call-to-action border-bottom">
+                        <div class="container">
+                            <div class="d-flex justify-content-center align-items-center content">
+                                <h3>Link para gov. corp.</h3><a href="/gov.pdf">Link</a></div>
+                        </div>
+                    </section>
                     <p>Hello! I am <strong>John Smith</strong>. I work as interface and front end developer. I have passion for pixel perfect, minimal and easy to use interfaces.</p><a class="btn btn-outline-primary" role="button" href="#">Hire me</a></div>
             </div>
         </section>
