add s-trat page

--- a/projetos.html
+++ b/projetos.html
@@ -7,7 +7,7 @@
         <link rel="icon" type="image/x-icon" href="/assets/img/avatar.ico">
         <meta name="theme-color" content="#4389FA">
         <meta name="apple-mobile-web-app-status-bar-style" content="#4389FA">
-        <meta name="description" content="Desenvolvedor BackEnd, FrontEnd e Mobile">
+        <meta name="description" content="Lista de projetos do Desenvolvedor Gabriel Zanatto Salami, alguns a trabalho e outros como hobby">
         <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
         <link rel="stylesheet" href="assets/css/style.css">
         <link rel="manifest" href="manifest.json">
