--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <h2>Meus Projetos</h2>
                     </div>
                     <div class="row no-gutters">
-                        <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/s-trat.png"></a></div>
+                        <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="/s-trat.html"><img class="img-fluid image" src="assets/img/s-trat.png"></a></div>
                         <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/copac.png"></a></div>
                         <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/tech.png"></a></div>
                     </div>
