--- a/s-trat.html
+++ b/s-trat.html
@@ -1,79 +1,149 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Project Page - Gabriel Salami</title>
-    <meta name="description" content="Desenvolvedor BackEnd, FrontEnd e Mobile">
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="manifest" href="manifest.json">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700">
-    <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/css/pikaday.min.css">
-</head>
-
-<body>
-    <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-white portfolio-navbar gradient">
-        <div class="container"><a class="navbar-brand logo" href="#">Gabriel Salami</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navbarNav"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse"
-                id="navbarNav">
-                <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="projects-compact-grid.html">Projects</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="cv.html">CV</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="hire-me.html">Hire me</a></li>
-                </ul>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+        <title>S-trat - Gabriel Salami</title>
+        <link rel="icon" type="image/x-icon" href="/assets/img/avatar.ico">
+        <meta name="theme-color" content="#4389FA">
+        <meta name="apple-mobile-web-app-status-bar-style" content="#4389FA">
+        <meta name="description" content="Lista de projetos do Desenvolvedor Gabriel Zanatto Salami, alguns a trabalho e outros como hobby">
+        <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+        <link rel="stylesheet" href="assets/css/style.css">
+        <link rel="manifest" href="manifest.json">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700">
+        <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/css/pikaday.min.css">
+    </head>
+    <body>
+        <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-white portfolio-navbar gradient">
+            <div class="container"><a class="navbar-brand logo" href="/">Gabriel Salami</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navbarNav"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+                <div class="collapse navbar-collapse"
+                    id="navbarNav">
+                    <ul class="nav navbar-nav ml-auto">
+                        <li class="nav-item" role="presentation"><a class="nav-link active" href="/projetos.html">Projetos</a></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link" href="/cv.html">CV</a></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link" href="/hire-me.html">Contato</a></li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
-    <main class="page project-page">
-        <section class="portfolio-block project">
+        </nav>
+        <main class="page project-page">
+            <section class="portfolio-block project">
+                <div class="container">
+                    <div class="heading">
+                        <h2>S-trat</h2>
+                    </div>
+                    <div class="image" style="background-image:url(&quot;assets/img/s-trat/image4.jpg&quot;);"></div>
+                    <div class="row">
+                        <div class="col-12 col-md-6 offset-md-1 info">
+                            <h3>Descrição</h3>
+                            <p>Sistema para acompanhamento de tratamentos de saúde, lembrete de medicamentos, registro e compartilhamento de histórico de saúde.</p>
+                            <p>Acumulou prêmios nacionais e internacionais além de uma nota 10 na banca do meu TCC.</p>
+                            <a class="btn btn-primary" role="button" href="https://s-trat.tk/">Acesse a landing page</a>
+                        </div>
+                        <div class="col-12 col-md-3 offset-md-1 meta">
+                            <div class="tags">
+                                <span class="meta-heading">Tecnologias</span>
+                                <span>PHP</span>
+                                <span>MySQL</span>
+                                <span>Android (Java)</span>
+                                <span>HTML</span>
+                                <span>CSS</span>
+                                <span>JQuery</span>
+                                <span class="meta-heading">Desenvolvido entre</span>
+                                <span>jul. de 2017 – mar. de 2019</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <hr>
+            <section class="portfolio-block projects-cards">
+                <div class="container">
+                    <div class="heading">
+                        <h2>Screenshots</h2>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6 col-lg-4">
+                            <div class="card border-0"><a href="#"><img class="card-img-top scale-on-hover" src="assets/img/s-trat/" alt="Card Image"></a>
+                                <div class="card-body">
+                                    <h6><a href="#">Lorem Ipsum</a></h6>
+                                    <p class="text-muted card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6 col-lg-4">
+                            <div class="card border-0"><a href="#"><img class="card-img-top scale-on-hover" src="assets/img/nature/image2.jpg" alt="Card Image"></a>
+                                <div class="card-body">
+                                    <h6><a href="#">Lorem Ipsum</a></h6>
+                                    <p class="text-muted card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6 col-lg-4">
+                            <div class="card border-0"><a href="#"><img class="card-img-top scale-on-hover" src="assets/img/nature/image3.jpg" alt="Card Image"></a>
+                                <div class="card-body">
+                                    <h6><a href="#">Lorem Ipsum</a></h6>
+                                    <p class="text-muted card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6 col-lg-4">
+                            <div class="card border-0"><a href="#"><img class="card-img-top scale-on-hover" src="assets/img/nature/image4.jpg" alt="Card Image"></a>
+                                <div class="card-body">
+                                    <h6><a href="#">Lorem Ipsum</a></h6>
+                                    <p class="text-muted card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6 col-lg-4">
+                            <div class="card border-0"><a href="#"><img class="card-img-top scale-on-hover" src="assets/img/nature/image5.jpg" alt="Card Image"></a>
+                                <div class="card-body">
+                                    <h6><a href="#">Lorem Ipsum</a></h6>
+                                    <p class="text-muted card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6 col-lg-4">
+                            <div class="card border-0"><a href="#"><img class="card-img-top scale-on-hover" src="assets/img/nature/image6.jpg" alt="Card Image"></a>
+                                <div class="card-body">
+                                    <h6><a href="#">Lorem Ipsum</a></h6>
+                                    <p class="text-muted card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
+        <footer class="page-footer gradient">
             <div class="container">
-                <div class="heading">
-                    <h2>S-trat</h2>
-                </div>
-                <div class="image" style="background-image:url(&quot;assets/img/tech/image4.jpg&quot;);"></div>
-                <div class="row">
-                    <div class="col-12 col-md-6 offset-md-1 info">
-                        <h3>Description</h3>
-                        <p>Nam a ultrices mauris. Nam efficitur, lorem a vehicula interdum, ligula velit euismod lorem, vitae vehicula ligula tortor eu leo. Maecenas porttitor massa ut vestibulum euismod. Aliquam eget mi aliquam.</p>
-                        <p>Lorem ipsum dapibus dolor non, malesuada mauris. Aliquam eleifend mauris non odio mattis auctor. Aenean sit amet elementum tellus, a facilisis ligula. Pellentesque ac vehicula mauris.</p>
-                    </div>
-                    <div class="col-12 col-md-3 offset-md-1 meta">
-                        <div class="tags"><span class="meta-heading">Tags</span><a href="#">Java</a><a href="#">Android</a><span class="meta-heading">Date</span><span>25-04-2017</span></div>
-                    </div>
-                </div>
-                <div class="more-projects">
-                    <h3 class="text-center">More Projects</h3>
-                    <div class="row gallery">
-                        <div class="col-md-4 col-lg-3">
-                            <div class="item"><a href="#"><img class="img-fluid scale-on-hover" src="assets/img/nature/image2.jpg"></a></div>
-                        </div>
-                        <div class="col-md-4 col-lg-3">
-                            <div class="item"><a href="#"><img class="img-fluid scale-on-hover" src="assets/img/nature/image3.jpg"></a></div>
-                        </div>
-                        <div class="col-md-4 col-lg-3">
-                            <div class="item"><a href="#"><img class="img-fluid scale-on-hover" src="assets/img/tech/image4.jpg"></a></div>
-                        </div>
-                        <div class="col-md-4 col-lg-3">
-                            <div class="item"><a href="#"><img class="img-fluid scale-on-hover" src="assets/img/nature/image5.jpg"></a></div>
-                        </div>
-                    </div>
+                <div class="links"><a href="#">Sobre mim</a><a href="#">Contato</a><a href="#">Projetos</a></div>
+                <div class="social-icons">
+                    <a href="https://facebook.com/gabriel.zanattosalami" target="_blank" rel="noopener, noreferrer, nofollow"><i data-feather="facebook"></i></a>
+                    <a href="http://github.com/salami96" target="_blank" rel="noopener, noreferrer, nofollow"><i data-feather="github"></i></a>
+                    <a href="https://www.linkedin.com/in/gabriel-zanatto-salami/" target="_blank" rel="noopener, noreferrer, nofollow"><i data-feather="linkedin"></i></a>
                 </div>
             </div>
-        </section>
-    </main>
-    <footer class="page-footer">
-        <div class="container">
-            <div class="links"><a href="#">About me</a><a href="#">Contact me</a><a href="#">Projects</a></div>
-            <div class="social-icons"><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-instagram-outline"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a></div>
-        </div>
-    </footer>
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/pikaday.min.js"></script>
-    <script src="assets/js/theme.js"></script>
-</body>
-
+        </footer>
+        <button class="btn btn-success m-1 whats" onclick="whats()">
+            <img src="/assets/img/wpp.png" alt="Icone do WhatsApp">
+        </button>
+        <script src="assets/js/jquery.min.js"></script>
+        <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/pikaday.min.js"></script>
+        <script src="assets/js/theme.js"></script>
+        <script src="https://unpkg.com/feather-icons"></script>
+        <script type="text/javascript">
+            feather.replace();
+            function whats() {
+                window.open(
+                    'https://api.whatsapp.com/send?phone=5551999262182&text='
+                    + 'Olá, tudo bem? Peguei seu contato no www.gabrielsalami.dev!',
+                    '_blank',
+                );
+            }
+        </script>
+    </body>
 </html>
